MDEV-21564 Assert in trx_purge_add_update_undo_to_history during shutdown

- dict_table_try_drop_aborted() can generate undo logs. So it should
be avoided after shutdown of background threads.